--- a/portfolio.html
+++ b/portfolio.html
@@ -220,13 +220,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/technokryak-min.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/technokryak-min.jpg    1x,
+                        ./images/technokryak-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/technokryak-min-tablet-1x.jpg 1x,
+                        ./images/technokryak-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/technokryak-min-mobile-1x.jpg 1x,
+                        ./images/technokryak-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/technokryak-min.jpg"
+                      alt="Технокряк"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -242,13 +265,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/poster-nba-min.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/poster-nba-min.jpg    1x,
+                        ./images/poster-nba-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/poster-nba-min-tablet-1x.jpg 1x,
+                        ./images/poster-nba-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/poster-nba-min-mobile-1x.jpg 1x,
+                        ./images/poster-nba-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/poster-nba-min.jpg"
+                      alt="Постер New Orlean vs Golden Star"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -266,13 +312,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/seafood-min.jpg"
-                    alt="Ресторан Seafood"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/seafood-min.jpg    1x,
+                        ./images/seafood-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/seafood-min-tablet-1x.jpg 1x,
+                        ./images/seafood-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/seafood-min-mobile-1x.jpg 1x,
+                        ./images/seafood-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/seafood-min.jpg"
+                      alt="Ресторан Seafood"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -288,13 +357,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/project-prime-min.jpg"
-                    alt="Проєкт Prime"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/project-prime-min.jpg    1x,
+                        ./images/project-prime-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/project-prime-min-tablet-1x.jpg 1x,
+                        ./images/project-prime-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/project-prime-min-mobile-1x.jpg 1x,
+                        ./images/project-prime-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/project-prime-min.jpg"
+                      alt="Проєкт Prime"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -310,13 +402,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/project-boxes-min.jpg"
-                    alt="Проєкт Boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/project-boxes-min.jpg    1x,
+                        ./images/project-boxes-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/project-boxes-min-tablet-1x.jpg 1x,
+                        ./images/project-boxes-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/project-boxes-min-mobile-1x.jpg 1x,
+                        ./images/project-boxes-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/project-boxes-min.jpg"
+                      alt="Проєкт Boxes"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -332,13 +447,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/Inspiration-has-no-Borders-min.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Inspiration-has-no-Borders-min.jpg    1x,
+                        ./images/Inspiration-has-no-Borders-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Inspiration-has-no-Borders-min-tablet-1x.jpg 1x,
+                        ./images/Inspiration-has-no-Borders-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Inspiration-has-no-Borders-min-mobile-1x.jpg 1x,
+                        ./images/Inspiration-has-no-Borders-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/Inspiration-has-no-Borders-min.jpg"
+                      alt="Inspiration has no Borders"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -356,13 +494,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/Limited-edition-min.jpg"
-                    alt="Видання Limited Edition"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/Limited-edition-min.jpg    1x,
+                        ./images/Limited-edition-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Limited-edition-min-tablet-1x.jpg 1x,
+                        ./images/Limited-edition-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/Limited-edition-min-mobile-1x.jpg 1x,
+                        ./images/Limited-edition-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/Limited-edition-min.jpg"
+                      alt="Видання Limited Edition"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -378,13 +539,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/project-lab-min.jpg"
-                    alt="Проєкт LAB"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/project-lab-min.jpg    1x,
+                        ./images/project-lab-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/project-lab-min-tablet-1x.jpg 1x,
+                        ./images/project-lab-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/project-lab-min-mobile-1x.jpg 1x,
+                        ./images/project-lab-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/project-lab-min.jpg"
+                      alt="Проєкт LAB"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -400,13 +584,36 @@
             <li class="team-projects__work">
               <a href="" class="team-projects__link link">
                 <div class="team-projects__wrap">
-                  <img
-                    class="team-projects__image"
-                    src="./images/growing-business-min.jpg"
-                    alt="Growing Business"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/growing-business-min.jpg    1x,
+                        ./images/growing-business-min-2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/growing-business-min-tablet-1x.jpg 1x,
+                        ./images/growing-business-min-tablet-2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/growing-business-min-mobile-1x.jpg 1x,
+                        ./images/growing-business-min-mobile-2x.jpg 2x
+                      "
+                      media="(min-width: 320px)"
+                    />
+                    <img
+                      class="team-projects__image"
+                      src="./images/growing-business-min.jpg"
+                      alt="Growing Business"
+                      width="450"
+                      height="294"
+                    />
+                  </picture>
                   <p class="team-projects__text">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
